update db service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,11 @@ services:
   db: 
     build: "./Database/"
     restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: ''
+      MYSQL_DATABASE: ussd
+      MYSQL_USER: root
+      MYSQL_PASSWORD: ''    
 
   ussd: 
     build: "."
